[#MODX-843] - Fixed Alignment of help balloon. - Fixed datepicker display and reinserted datepicker styles to style.css

--- a/manager/media/style/MODxCarbon/style.css
+++ b/manager/media/style/MODxCarbon/style.css
@@ -1433,3 +1433,93 @@ fieldset.legacy h2 {
   padding: 0 10px;
   border-bottom: 1px solid #e4e4e4!important;
 }
+
+/* date picker */
+form#mutateContent input.DatePicker{
+    width: 150px;
+    padding: 3px 3px 3px 24px;
+    border: 1px solid #0070bf;
+    font-size: 13px;
+    background: #fff url(images/icons/datenofocus.gif) no-repeat top left;
+    cursor: pointer;
+}
+input:focus.DatePicker{
+    background: #fffce9 url(images/icons/datefocus.gif) no-repeat top left;
+}
+.dp_container{
+    position: relative;
+    padding: 0;
+    z-index: 500;
+}
+.dp_cal{
+    background-color: #fff;
+    border: 1px solid #0070bf;
+    position: absolute;
+    width: 177px;
+    top: 24px;
+    left: 0;
+    margin: 0px 0px 3px 0px;
+}
+.dp_cal table{
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.dp_cal p {
+    width: 177px;	
+}
+
+form#mutateContent .dp_cal input.cal_timeTextBox {
+	display: block;
+    text-align: center;
+    width: 60px;
+    margin: 0 auto;
+    margin-top: 3px;
+}
+
+.dp_cal select{
+    margin: 2px 3px;
+    font-size: 11px;
+}
+.dp_cal select option{
+    padding: 1px 3px;
+}
+.dp_cal th,
+.dp_cal td{
+    width: 14.2857%;
+    text-align: center;
+    font-size: 11px;
+    padding: 2px 0;
+}
+.dp_cal th{
+    border: solid #aad4f2;
+    border-width: 1px 0;
+    color: #797774;
+    background: #daf2e6;
+    font-weight: bold;
+}
+.dp_cal td{
+    cursor: pointer;
+}
+.dp_cal thead th{
+    background: #d9eefc;
+}
+.dp_cal td.dp_roll{
+    color: #000;
+    background: #fff6bf;
+}
+/* must have this for the IE6 select box hiding */
+.dp_hide{
+    visibility: hidden;
+}
+.dp_empty{
+    background: #eee;
+}
+.dp_today{
+    background: #daf2e6;
+}
+.dp_selected{
+    color: #fff;
+    background: #328dcf;
+}
